--- a/index.html
+++ b/index.html
@@ -23,10 +23,26 @@
             <p class="banner-desc dark-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
             <button class="btn-primary">Explore More</button>
         </div>
-        <img src="./images/banner.png" alt="banner-background">
+        <div class="image-container">
+          <img src="./images/banner.png" alt="banner-background">
+        </div>
       </div>
     </header>
-    <main></main>
+    <main>
+      <section class="teams display-flex">
+          <div class="team-image-container">
+            <img src="./images/team1.png" alt="">
+            <img src="./images/team2.png" alt="">
+            <img src="./images/team3.png" alt="">
+            <img src="./images/team4.png" alt="">
+          </div>
+          <div class="our-features">
+            <h3 class="features-title"><span id="quick-list" class="dark-light-gray">Quick list</span> of Our <span id="features">Features</span></h3>
+            <p class="features-desc">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+            <button>Explore More</button>
+          </div>
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
